--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-This is your new Play 2.1 application
-=====================================
+A scrabble webapp written in Haskell using Yesod. Very much a work in progress.
 
-This file will be packaged with your application, when using `play dist`.
+Built on top of the game logic library: https://github.com/happy0/haskellscrabble
